# TaskSolutions

./: .gitignore  Makefile  multiprocessing_results.json  pyproject.toml
src/module_1/: asgi_wsgi.py  asyncio_request.py  asyncio_request_enhanced.py  binary_search.py  lru_cache.py  multiprocessing_results.json  multiprocessing_task.py  results.json  singleton.py  singleton_module.py
